--- a/styles.css
+++ b/styles.css
@@ -10,3 +10,11 @@ header {
     font-size: 32px;
     color: rgb(42, 122, 228);
 }
+
+section {
+    background: rgb(184, 156, 213);
+    padding-bottom: 80px;
+    padding-top: 80px;
+    display: flex;
+    justify-content: center;
+}
