--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@ body {
     color: white;
     background-color: black;
     margin: 0px;
+    font-family: ;
 }
 
 header {
@@ -17,4 +18,16 @@ section {
     padding-top: 80px;
     display: flex;
     justify-content: center;
+}
+
+.chamada-texto {
+    margin-right: 5%;
+}
+
+h1 {
+    font-size: 40px;
+}
+
+p {
+    font-size: 20px;
 }
