--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,19 @@
 body {
     color: white;
-    background-color: black;
+    background: black;
     margin: 0px;
-    font-family: 80px;
+    font-family: "Chakra Petch", sans-serif;
+    margin-bottom: 100px;
 }
 
 header {
-    border-bottom: solid 2px rgb(42, 122, 228) ;
+    border-bottom: solid 2px rgb(42, 122, 228);
     padding: 20px;
     font-size: 32px;
     color: rgb(42, 122, 228);
 }
 
-section {
+.chamada {
     background: rgb(184, 156, 213);
     padding-bottom: 80px;
     padding-top: 80px;
@@ -32,11 +33,7 @@ p {
     font-size: 20px;
 }
 
-img{
-    height: 200px;
-}
-
-.categoria-videos{
+.categoria-videos {
     display: flex;
     overflow-x: auto;
     gap: 10px;
@@ -45,15 +42,20 @@ img{
 .categoria {
     padding-left: 20px;
     padding-right: 20px;
-    margin: 50px;
-    margin-bottom: 100px;
+    margin-top: 50px;
 }
 
 .categoria-videos img {
     opacity: 0.5;
+    height: 200px;
 }
 
 .categoria-videos img:hover {
     opacity: 1.0;
-    border: 1px solid red;
+    border: 3px solid green;
 }
+
+.categoria h2 {
+    color: rgb(42, 122, 228);
+}
+ 
